# whisper_dart

./: .gitignore  .metadata  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: CMakeLists.txt  build.gradle
android/src/main/kotlin/com/example/whisper_dart/: WhisperDartPlugin.kt
android/src/test/kotlin/com/example/whisper_dart/: WhisperDartPluginTest.kt
example/: .gitignore  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/whisper_dart_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ios/: whisper_dart.podspec
ios/Classes/: WhisperDartPlugin.swift
lib/: whisper_dart.dart  whisper_dart_method_channel.dart  whisper_dart_platform_interface.dart
lib/src/: generated_whisper.dart  wav_util.dart  whisper_dart_isolate.dart  whisper_lib.dart
linux/: CMakeLists.txt  whisper_dart_plugin.cc  whisper_dart_plugin_private.h
linux/include/whisper_dart/: whisper_dart_plugin.h
linux/test/: whisper_dart_plugin_test.cc
macos/: libggml-base.0.9.4.dylib  libggml-blas.dylib  libggml-cpu.0.9.4.dylib  libggml-metal.0.9.4.dylib  libggml.0.9.4.dylib  libwhisper.dylib  whisper_dart.podspec
macos/Classes/: WhisperDartPlugin.swift
scripts/: build_macos.sh
test/: whisper_dart_method_channel_test.dart  whisper_dart_test.dart
windows/: CMakeLists.txt  whisper_dart_plugin.cpp  whisper_dart_plugin.h  whisper_dart_plugin_c_api.cpp
windows/include/whisper_dart/: whisper_dart_plugin_c_api.h
windows/test/: whisper_dart_plugin_test.cpp
